--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <body>
   <picture>
-    <source media="(max-width: 768px)" srcset="/assets/images/background-pattern-mobile.svg">
+    <source media="(max-width: 768px)" srcset="./assets/images/background-pattern-mobile.svg">
     <source srcset="/assets/images/background-pattern-desktop.svg">
-    <img class="background" src="/assets/images/background-pattern-desktop.svg" alt="background pattern">
+    <img class="background" src="./assets/images/background-pattern-desktop.svg" alt="background pattern">
   </picture>
   
   <main>
@@ -30,7 +30,7 @@
 
   <div class="accordion">
     <div class="title">
-      <img  src="/assets/images/icon-star.svg" alt="star">
+      <img  src="./assets/images/icon-star.svg" alt="star">
       <h1>
 
         FAQs
