--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <picture>
     <source media="(max-width: 768px)" srcset="./assets/images/background-pattern-mobile.svg">
-    <source srcset="/assets/images/background-pattern-desktop.svg">
+    <source srcset="./assets/images/background-pattern-desktop.svg">
     <img class="background" src="./assets/images/background-pattern-desktop.svg" alt="background pattern">
   </picture>
   
